# Amadeus

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TEST_REPORT.md  docker-compose.yaml  pyproject.toml  start.sh
backend/: .env.example  README.md
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/tests/: conftest.py  test_amadeus_desktop.py  test_api.py  test_asr_privacy_and_logging.py  test_asr_task_chunking.py  test_celery_config.py  test_cors.py  test_engines.py  test_higgs_remote.py  test_higgs_tts_api.py  test_hotwords.py  test_inference_scheduler.py  test_json_serialization.py  test_llm_summary_stream.py  test_model_errors.py  test_model_scheduler_api.py  test_pipeline.py  test_streaming_session.py  test_x_asr.py
doc/: CHANGELOG.md  README.md  backend.md  desktop.md  index.md  instruction.md  package-lock.json  package.json  streaming.md
doc/.vitepress/: config.mts
doc/asrapp/: ARCHITECTURE.md  QUICKSTART.md  README.md
doc/desktop/: INPUT_AND_OVERLAYS.md  MODEL_MANAGEMENT.md  README.md  REMOTE_TTS_AND_DEBUG.md  SPEECH_RECOGNITION.md  SUMMARY_PRIVACY_AND_LIFECYCLE.md  TTS_VOICE.md
doc/development/: README.md
doc/plans/: 2025-06-18-fix-websocket-cpu-asr.md  2026-06-12-asrapp-docs-tree.md  2026-06-12-asrapp-documentation.md  2026-06-12-init-task-workflow.md  2026-06-13-fireredasr2s-elysia-annotation.md  2026-06-14-elysia-audio-aed-annotation.md  2026-06-15-Elysia数据集优化.md  2026-06-17-desktop-higgs-tts-voice-changer.md  2026-06-18-complete-higgs-tts-model-settings.md  2026-06-18-desktop-tts-model-settings-realtime.md  2026-06-18-fix-realtime-tts-url-cleanup-stop.md  2026-06-18-merge-root-doc-into-asrapp.md  2026-06-18-project-tmp-cleanup.md  2026-06-18-tts-asr-model-management-optimization.md  2026-06-18-vscode-preview-open-mode.md  2026-06-19-fix-public-websocket-higgs-stream.md  2026-06-19-fix-reference-prefill-data-url-fetch.md  2026-06-19-fix-tts-reference-asr-failed-fetch.md  2026-06-19-realtime-asr-tts-latency-streaming.md  2026-06-19-tts-asr-model-management-completion.md  2026-06-19-tts-reference-audio-recording-asr-fill.md  2026-06-19-unify-tts-voices-directory.md  2026-06-19-use-transcribe-for-tts-reference-prefill.md  (+46 more)
runner/: __init__.py
scripts/: benchmark_realtime_asr_tts.py  e2e_live_test.py  install_x_asr_cuda.sh  run_amadeus_windows_e2e.ps1  stress_asr_reference_latency.py  stress_test.py  test_asr_fill_mic_isolation.sh  test_audio_devices.sh  test_consecutive_asr.py  test_consecutive_offline_asr_fill.sh  test_end_to_end_delay.py  test_microphone_capture_continuity.sh  verify_higgs_tts_e2e.py  verify_x_asr_cuda.py
tests/: __init__.py  test_agent_detection.py  test_agent_router.py  test_asr_base.py  test_cli_agents.py  test_config.py  test_logger.py  test_memory.py  test_mock_tts.py  test_orchestrator.py  test_skills.py  test_tts_base.py  test_tts_style.py  test_voice.py
(+263 files in other folders)
