[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-backend"
version = "0.1.0"
description = "Offline-first ASR service with multi-engine support"
requires-python = ">=3.10,<3.15"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",      # file upload
    "websockets>=12.0",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "aiosqlite>=0.20.0",            # async SQLite (dev); swap for asyncpg in prod

    # Async task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.6",

    # Audio processing
    "soundfile>=0.12.1",
    "librosa>=0.10.2",              # resampling, feature extraction
    "numpy>=1.26.0",

    # ASR engines (install selectively via extras)
    # faster-whisper and vosk listed in extras below

    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",

    # HTTP client (health checks, model downloads)
    "httpx>=0.27.0",

    # Logging & observability
    "structlog>=24.2.0",
]

[project.optional-dependencies]
firered = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.51.3",
    "cn2an>=0.5.23",
    "kaldiio>=2.18.0",
    "kaldi-native-fbank>=1.15",
    "sentencepiece>=0.1.99",
    "textgrid>=1.6.1",
    "peft>=0.13.2",
    "modelscope>=1.37.1",
]
whisper = [
    "faster-whisper>=1.0.3",
]
vosk = [
    "vosk>=0.3.45",
]
sherpa = [
    "sherpa-onnx>=1.10.0",
]
x-asr = [
    "sherpa-onnx>=1.10.0",
]
sensevoice = [
    "funasr>=1.1.3",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "kaldi-native-fbank>=1.15",
]
qwen3asr = [
    "qwen-asr>=0.0.6,<0.1.0",
    "torch>=2.1.0; python_version < '3.13'",
    "torch>=2.6.0; python_version >= '3.13'",
    "transformers>=4.51.3",
    "accelerate>=0.30.0",
]
vad = [
    "silero-vad>=5.1.0",           # reserved — not wired in yet
]
punctuation = [
    "funasr>=1.1.3",
]
voxcpm = [
    "voxcpm>=0.1.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",               # TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "asr-backend[firered,whisper,vosk,sherpa,x-asr,sensevoice,qwen3asr,vad,punctuation,dev]",
]

[tool.setuptools.packages.find]
where = [".", "backend"]
include = ["runner*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "backend/tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
